<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent" android:orientation="vertical">
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent">
            <TextView android:text="@string/owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:gravity="right"
                android:textSize="20dip" />
        </LinearLayout>
        <include layout="@layout/partial_separator" />
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent">
            <TextView android:text="@string/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:gravity="right"
                android:textSize="20dip" />
        </LinearLayout>
        <include layout="@layout/partial_separator" />
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent">
            <TextView android:text="@string/tree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/tree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:gravity="right"
                android:textSize="20dip" />
        </LinearLayout>
        <include layout="@layout/partial_separator" />
        <TextView android:text="@string/note"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <EditText android:layout_height="wrap_content"
            android:id="@+id/note" android:layout_width="fill_parent"
            android:layout_weight="1" android:gravity="top" />
        <include layout="@layout/partial_separator" />
        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent">
            <Button android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:onClick="onOkButton" />
            <Button android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" android:onClick="onCancelButton" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>